# CC-23-24

./: .gitignore  FS_Node.py  Makefile  README.md  pyproject.toml
Portatil1/: file1.txt
Tracker/: FS_Data.csv  FS_Tracker.py
assets/: FS_Data.json
assets/file_system/portatil1/: file1.txt  file3.txt
bind_config/: named.conf.local.txt
bind_config/zones/: cc.pt.txt
filetransfer/: FS_Node.py  FS_Tracker.py  Makefile  node.py  pyproject.toml  tracker.py  utils.py
filetransfer/assets/: FS_Data.json
filetransfer/assets/file_system/portatil2/: file1.txt
filetransfer/filetransfer/: FS_Node.py  FS_Tracker.py  file.py  node.py  tracker.py  utils.py
filetransfer/filetransfer/file_system/portatil1/: file1.txt
filetransfer/filetransfer/file_system/portatil3/: file1.txt  file2.txt
filetransfer/tests/: test_file.py  test_sent.py  test_tracker.py  test_utils.py
tests/: test_utils.py
